# kafka-exchange

./: CHANGELOG.md  README.md  cabal.project  kafka-exchange.cabal  notes.txt
src-channel/: Channel.hs  ChannelSig.hsig
src-exchange/: Communication.hsig  Exchange.hs
src-types/Kafka/Exchange/: Types.hs
src/Kafka/: Exchange.hs
